# basilisk

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  action.yml  basilisk-backend.spec  build-desktop.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yml  docker-build.yml  python-publish.yml
basilisk/: __init__.py  desktop_backend.py  differential.py  native_bridge.py  posture.py
basilisk/api/: __init__.py  eval.py  modules.py  reports.py  scan.py  sessions.py  settings.py  shared.py
basilisk/attacks/: base.py  multimodal.py
basilisk/attacks/dos/: context_bomb.py  loop_trigger.py  token_exhaustion.py
basilisk/attacks/exfil/: rag_data.py  tool_schema.py  training_data.py
basilisk/attacks/extraction/: gradient_walk.py  role_confusion.py  simulation.py  translation.py
basilisk/attacks/guardrails/: encoding_bypass.py  logic_trap.py  roleplay.py  systematic.py
basilisk/attacks/injection/: direct.py  encoding.py  indirect.py  multilingual.py  split.py
basilisk/attacks/multiturn/: cultivation.py  escalation.py  memory_manipulation.py  persona_lock.py
basilisk/attacks/rag/: document_injection.py  knowledge_enum.py  poisoning.py
basilisk/attacks/toolabuse/: chained.py  command_injection.py  sqli.py  ssrf.py
basilisk/campaign/: __init__.py  graph.py  models.py
basilisk/cli/: main.py  scan.py
basilisk/core/: audit.py  config.py  database.py  evidence.py  finding.py  models.py  profile.py  refusal.py  retention.py  schema.py  secrets.py  session.py
basilisk/eval/: __init__.py  assertions.py  config.py  eval-schema.json  report.py  runner.py
basilisk/evolution/: cache.py  crossover.py  curiosity.py  diversity.py  engine.py  fitness.py  intent.py  operators.py  population.py
basilisk/native_libs/: libbasilisk_fuzzer.h  libbasilisk_matcher.h  manifest.json  manifest.sig
basilisk/payloads/: dos.yaml  effectiveness.py  loader.py  multimodal.yaml  multiturn.yaml
basilisk/policy/: __init__.py  finding.py  models.py
basilisk/providers/: base.py  custom_http.py  litellm_adapter.py  websocket.py
basilisk/recon/: fingerprint.py  guardrails.py  rag.py  tools.py
basilisk/report/: generator.py  html.py  pdf.py  sarif.py
basilisk/report/templates/: finding.html.j2  report.html.j2
basilisk/runtime/: __init__.py  orchestrator.py
desktop/: main.js  package-lock.json  package.json  preload.js
desktop/scripts/: notarize.js
desktop/src/: advanced.js  app.js  core.js  index.html  modules.js  probes_eval.js  renderer.js  scan.js  sessions.js  shared.js  style.css  updates.js
desktop/tests/: e2e-smoke.js
docs/: README.md  api-reference.md  architecture.md  attack-modules.md  cli-advanced-guide.md  cli-beginner-guide.md  cli-reference.md  desktop-advanced-guide.md  desktop-beginner-guide.md  eval-probes-curiosity.md  getting-started.md
native/: build.sh
native/c/: encoder.c  tokens.c
native/go/: go.mod
native/go/fuzzer/: fuzzer.go
scripts/: generate_release_manifest.py  render_release_notes.py  sign_native_manifests.py  sign_release_bundle.py  verify_release_bundle.py  write_build_metadata.py
tests/: conftest.py  test_cli.py  test_core.py  test_curiosity.py  test_effectiveness.py  test_eval.py  test_evolution.py  test_multimodal.py  test_native_security.py  test_probes.py  test_refusal.py  test_reports.py  test_runtime.py  test_storage.py
